--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "@vueuse/core": "^9.4.0",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "gm": "^1.25.0",
