--- a/package.json
+++ b/package.json
@@ -7,12 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "@quasar/extras": "^1.0.0",
     "@vueuse/core": "^9.4.0",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "gm": "^1.25.0",
-    "quasar": "^2.0.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
@@ -23,8 +21,7 @@
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "sass": "1.32.12",
-    "sass-loader": "^12.0.0",
-    "vue-cli-plugin-quasar": "~5.0.1"
+    "sass-loader": "^12.0.0"
   },
   "browserslist": [
     "> 1%",
