--- a/client/package.json
+++ b/client/package.json
@@ -7,13 +7,19 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "@vueuse/core": "^9.4.0",
+    "@mdi/font": "5.9.55",
+    "@vueuse/components": "^10.0.2",
+    "@vueuse/core": "^9.13.0",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "gm": "^1.25.0",
+    "moment": "^2.29.4",
+    "roboto-fontface": "*",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vuetify": "^3.0.0-beta.0",
+    "vuex": "^4.0.0",
+    "webfontloader": "^1.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
@@ -21,7 +27,9 @@
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "sass": "1.32.12",
-    "sass-loader": "^12.0.0"
+    "sass-loader": "^12.0.0",
+    "vue-cli-plugin-vuetify": "~2.5.8",
+    "webpack-plugin-vuetify": "^2.0.0-alpha.0"
   },
   "browserslist": [
     "> 1%",
