--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "@vuepic/vue-datepicker": "^5.0.1",
     "@vueuse/components": "^10.0.2",
     "@vueuse/core": "^9.13.0",
     "axios": "^0.27.2",
