--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "@vuelidate/core": "^2.0.2",
+    "@vuelidate/validators": "^2.0.2",
     "@vuepic/vue-datepicker": "^5.0.1",
     "@vueuse/components": "^10.0.2",
     "@vueuse/core": "^9.13.0",
