--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@vueuse/core": "^9.13.0",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "eslint-plugin-vuetify": "^2.0.2",
     "gm": "^1.25.0",
     "moment": "^2.29.4",
     "roboto-fontface": "*",
