--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,12 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "@tiptap/extension-link": "^2.1.7",
+    "@tiptap/extension-text-align": "^2.1.7",
+    "@tiptap/extension-underline": "^2.1.6",
+    "@tiptap/pm": "^2.1.6",
+    "@tiptap/starter-kit": "^2.1.6",
+    "@tiptap/vue-3": "^2.1.6",
     "@vuelidate/core": "^2.0.2",
     "@vuelidate/validators": "^2.0.2",
     "@vuepic/vue-datepicker": "^5.0.1",
