--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,18 @@
     "@tiptap/extension-font-family": "^2.1.7",
     "@tiptap/extension-highlight": "^2.1.7",
     "@tiptap/extension-link": "^2.1.7",
+    "@tiptap/extension-mention": "^2.1.7",
+    "@tiptap/extension-placeholder": "^2.1.7",
+    "@tiptap/extension-table": "^2.1.7",
+    "@tiptap/extension-table-cell": "^2.1.7",
+    "@tiptap/extension-table-header": "^2.1.7",
+    "@tiptap/extension-table-row": "^2.1.7",
     "@tiptap/extension-text-align": "^2.1.7",
     "@tiptap/extension-text-style": "^2.1.7",
     "@tiptap/extension-underline": "^2.1.6",
     "@tiptap/pm": "^2.1.6",
     "@tiptap/starter-kit": "^2.1.6",
+    "@tiptap/suggestion": "^2.1.7",
     "@tiptap/vue-3": "^2.1.6",
     "@vuelidate/core": "^2.0.2",
     "@vuelidate/validators": "^2.0.2",
@@ -28,6 +35,7 @@
     "gm": "^1.25.0",
     "moment": "^2.29.4",
     "roboto-fontface": "*",
+    "tippy.js": "^6.3.7",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuetify": "^3.0.0-beta.0",
