--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,7 @@
     "@vuelidate/validators": "^2.0.2",
     "@vuepic/vue-datepicker": "^5.0.1",
     "@vueup/vue-quill": "^1.2.0",
-    "axios": "^0.27.2",
+    "axios": "^1.6.2",
     "core-js": "^3.8.3",
     "eslint-plugin-vuetify": "^2.0.2",
     "gm": "^1.25.0",
@@ -38,7 +38,8 @@
     "tippy.js": "^6.3.7",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
-    "vuetify":  "^3.4.0",
+    "vuedraggable": "^4.1.0",
+    "vuetify": "^3.4.0",
     "vuex": "^4.0.0",
     "webfontloader": "^1.0.0"
   },
@@ -46,7 +47,7 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@vue/cli-service": "5.0.8",
     "sass": "1.32.12",
     "sass-loader": "^12.0.0",
     "vue-cli-plugin-vuetify": "~2.5.8",
